--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
   font: 90%/150% Arial,Helvetica,sans-serif;
   margin: 20px auto;
   width: 800px;
+  background: #440000;
 }
 a {
   color: #FF6600;
